--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,5 +12,9 @@ phases:
     commands:
       - echo Installing source NPM dependencies...
       - npm install
-  
+  # Include only the files required for your application to run.
+artifacts:
+  files:
+    - package.json
+    - node_modules/**/*
 
