--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,10 +11,16 @@ phases:
   pre_build:
     commands:
       - echo Installing source NPM dependencies...
-      - npm install
+      - npm install       
+  build:
+    commands:
+      - npm run build
+      - npm start     
   # Include only the files required for your application to run.
 artifacts:
   files:
+    - src/index.js
+    - src/app.js
     - package.json
     - node_modules/**/*
 
