--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,7 +20,7 @@ phases:
 artifacts:
   files:
     - src/index.js
-    - src/app.js
+    - src/App.js
     - package.json
     - node_modules/**/*
 
