--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,7 @@ phases:
     commands:
       - echo Installing Mocha...
       - npm install -g mocha      
-      - sudo yum install -y epel-release
+      - yum install -y epel-release
       - sudo yum –y install nginx
       - sudo systemctl start nginx
   pre_build:
