--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,8 +9,8 @@ phases:
       - echo Installing Mocha...
       - npm install -g mocha      
       - yum install -y epel-release
-      - sudo yum –y install nginx
-      - sudo systemctl start nginx
+      - yum –y install nginx
+      - systemctl start nginx
   pre_build:
     commands:
       - echo Installing source NPM dependencies...
