--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,9 +21,7 @@ artifacts:
   files:
     # - src/index.js
     # - src/App.js
-    - src 
-    - appspec.yml
-    - buildpsec.yml
+    - src/*
     - package.json
     - node_modules/**/*
 
