--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,5 +26,5 @@ artifacts:
     # - package.json
     # - node_modules/**/*
      - '**/*'
-  base-directory: 'careerladder'
+     - appspec.yaml
 
