--- a/appspec.yaml
+++ b/appspec.yaml
@@ -7,15 +7,17 @@ files:
     destination: /webapps/myApp
 hooks:
   BeforeInstall:
-    - location: Scripts/UnzipResourceBundle.sh
-    - location: Scripts/UnzipDataBundle.sh
+  #  - location: Scripts/UnzipResourceBundle.sh
+   # - location: Scripts/UnzipDataBundle.sh
+   
   AfterInstall:
-    - location: Scripts/RunResourceTests.sh
-      timeout: 180
+    #- location: Scripts/RunResourceTests.sh
+    #  timeout: 180
   ApplicationStart:
-    - location: Scripts/RunFunctionalTests.sh
-      timeout: 3600
+    pm2 serve build 3000 --name cl-frontend
+    # - location: Scripts/RunFunctionalTests.sh
+     # timeout: 3600
   ValidateService:
-    - location: Scripts/MonitorService.sh
-      timeout: 3600
+   # - location: Scripts/MonitorService.sh
+   #   timeout: 3600
       runas: codedeployuser
