--- a/appspec.yaml
+++ b/appspec.yaml
@@ -1,8 +1,21 @@
 version: 0.0
 os: linux
 files:
-  hooks:
+  - source: Config/config.txt
+    destination: /webapps/Config
+  - source: source
+    destination: /webapps/myApp
+hooks:
+  BeforeInstall:
+    - location: Scripts/UnzipResourceBundle.sh
+    - location: Scripts/UnzipDataBundle.sh
+  AfterInstall:
+    - location: Scripts/RunResourceTests.sh
+      timeout: 180
   ApplicationStart:
-    pm2 serve build 3000 --name cl-frontend
-    # - location: Scripts/RunFunctionalTests.sh
-     # timeout: 3600
+    - location: Scripts/RunFunctionalTests.sh
+      timeout: 3600
+  ValidateService:
+    - location: Scripts/MonitorService.sh
+      timeout: 3600
+      runas: codedeployuser
