--- a/appspec.yml
+++ b/appspec.yml
@@ -1,14 +1,12 @@
 version: 0.0
 os: linux
 files:
-  - source: Config/config.txt
-    destination: /webapps/Config
-  - source: source
-    destination: /webapps/myApp
+  - source: /
+    destination: /home/ec2-user/cladder
 hooks:
   BeforeInstall:
-    - location: Scripts/UnzipResourceBundle.sh
-    - location: Scripts/UnzipDataBundle.sh
+    - location: /home/ec2-user/cladder/scripts/startscript.sh
+    - location: scripts/UnzipDataBundle.sh
   AfterInstall:
     - location: Scripts/RunResourceTests.sh
       timeout: 180
