--- a/appspec.yml
+++ b/appspec.yml
@@ -6,10 +6,10 @@ files:
 hooks:
   BeforeInstall:
     - location: ./stopscript.sh
+      timeout: 180
   AfterInstall:
     - location: ./deletescript.sh
       timeout: 180
   ApplicationStart:
     - location: ./startscript.sh
       timeout: 3600
-      runas: root
