--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
   build:
     commands:
       - npm run build
-      - npm start     
+      # - npm start     
   # Include only the files required for your application to run.
 artifacts:
   files:
@@ -25,7 +25,7 @@ artifacts:
    # - src/appspec.yaml
     # - package.json
     # - node_modules/**/*
-     - '**/*'
+   #  - '**/*'
      - appspec.yml
      - base-directory:build
 
