--- a/appspec.yml
+++ b/appspec.yml
@@ -10,7 +10,7 @@ permissions:
    group: ec2-user
 hooks:
 ApplicationStop:
-- location: bin/app-stop
+- location: /bin/node/app-stop
   timeout: 10
   runas: ec2-user
    
