--- a/appspec.yml
+++ b/appspec.yml
@@ -1,17 +1,15 @@
 version: 0.0
 os: linux
 files:
-  - source: /
-    destination: /home/ec2-user/Ca-Lad/
-permissions:
-- object: /
-   pattern: "**"
-   owner: ec2-user
-   group: ec2-user
+  - source: /appspec.yml
+    destination: /home/ec2-user/cladder/
 hooks:
-ApplicationStop:
-- location: /bin/node/app-stop
-  timeout: 10
-  runas: ec2-user
-   
-  
+  BeforeInstall:
+    - location: ./stopscript.sh
+      timeout: 180
+  AfterInstall:
+    - location: ./deletescript.sh
+      timeout: 180
+  ApplicationStart:
+    - location: ./startscript.sh
+      timeout: 3600
