to trigger in jenkins

--- a/appspec.yml
+++ b/appspec.yml
@@ -5,8 +5,8 @@ files:
    #  destination: /home/ec2-user/cladder/
    - source: build
      destination: /home/ec2-user/cladder/build/
-   # - source: startscript.sh
-   #  destination: /home/ec2-user/cladder/
+   - source: startscript.sh
+     destination: /home/ec2-user/cladder/
 hooks:
   BeforeInstall:
     - location: stopscript.sh
