--- a/appspec.yml
+++ b/appspec.yml
@@ -1,8 +1,8 @@
 version: 0.0
 os: linux
 files:
-   # - source: appspec.yml
-   #  destination: /home/ec2-user/cladder/
+   - source: appspec.yml
+     destination: /home/ec2-user/cladder/
    - source: build
      destination: /home/ec2-user/cladder/build/
    - source: startscript.sh
